--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reinis Varavs | Portfolio</title>
+    <title>Reinis Varavs 🤟</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/hero.css">
@@ -12,9 +12,10 @@
     <link rel="stylesheet" href="./styles/snake.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/anim.css">
+    <link rel="stylesheet" href="./styles/about.css">
 </head>
 <body>
-    <div id="bg-image"></div>
+    <div id="bg-image" class="bg"></div>
 
     <header>
         <nav>
@@ -29,7 +30,7 @@
         <div id="typewriter-div">
 <pre id="typewriter">
     <span class="var-highlight">var</span> object = {
-        name: <span class="string-highlight">'Reinis Roberts Vāravs'</span>,
+        name: <span class="string-highlight">'Reinis Roberts Varavs'</span>,
         type: <span class="string-highlight">'Front-end Developer'</span>,
         location: <span class="string-highlight">'Latvia, Jelgava'</span>,
         properties:[<span class="string-highlight">'Javascript'</span>,
@@ -75,6 +76,12 @@
         </div>
     </div>
 
+    <div id="about">
+        <h1>Hello. I am Reinis</h1>
+        <p>Roberts Varavs</p>
+        <p>My name is Reinis Varavs and I am a <span class="span1">designer and front-end developer.</span></p>
+    </div>
+
     <section id="contacts-section">
         <div id="contacts-container">
             <h4 id="contacts-heading">contact.</h4>
@@ -106,7 +113,7 @@
 
     <footer>
         <div id="author-div">
-            <p id="author">© 2024 Reinis R. Vāravs</p>
+            <p id="author">2024 Reinis R. Varavs</p>
         </div>
         <div id="footer-buttons">
             <ul>
@@ -118,6 +125,9 @@
 
     <div id="cursor"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="./scripts/gsap.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/typer.js"></script>
     <script src="./scripts/anim.js"></script>
