--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="about-item hidden2">
                     <h1 class="string-highlight">Restoraunt "Viedi"</h1>
                     <p>"Viedi" is a web template that I created targeting the restaurant and food industry which anyone can use to present their business online.</p>
-                    <a href="https://reinisvaravs.github.io/restaurant/index.html" class="site-link" target="_blank">Case Study</a>
+                    <a href="https://reinisvaravs.github.io/restaurant/" class="site-link" target="_blank">Case Study</a>
                 </div>
             </div>
             <div class="item">
@@ -70,7 +70,7 @@
                 <div class="about-item hidden2">
                     <h1 class="string-highlight">Rullītis</h1>
                     <p>Rullītis is a karting center and I created their website from scratch using the frontend tools I know.</p>
-                    <a href="https://reinisvaravs.github.io/rullitis/index.html" class="site-link" target="_blank">Case Study</a>
+                    <a href="https://reinisvaravs.github.io/karting/" class="site-link" target="_blank">Case Study</a>
                 </div>
             </div>
         </div>
