--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="./styles/contacts.css">
     <link rel="stylesheet" href="./styles/snake.css">
     <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/about.css">
 </head>
 <body>
     <div id="bg-image" class="bg"></div>
@@ -30,10 +29,11 @@
         <div id="typewriter-div">
 <pre id="typewriter">
     <span class="var-highlight">var</span> object = {
-        name: <span class="string-highlight">'Reinis Roberts Varavs'</span>,
+        name: <span class="string-highlight">'Reinis Roberts Vāravs'</span>,
         type: <span class="string-highlight">'Front-end Developer'</span>,
         location: <span class="string-highlight">'Latvia, Jelgava'</span>,
-        properties:[<span class="string-highlight">'Javascript'</span>,
+        properties:[<span class="string-highlight">'JAVASCRIPT'</span>,
+                    <span class="string-highlight">'GSAP'</span>,
                     <span class="string-highlight">'CSS'</span>,
                     <span class="string-highlight">'HTML'</span>]
     }; </pre>
@@ -76,12 +76,6 @@
         </div>
     </div>
 
-    <div id="about">
-        <h1>Hello. I am Reinis</h1>
-        <p>Roberts Varavs</p>
-        <p>My name is Reinis Varavs and I am a <span class="span1">designer and front-end developer.</span></p>
-    </div>
-
     <section id="contacts-section">
         <div id="contacts-container">
             <h4 id="contacts-heading">contact.</h4>
@@ -113,7 +107,7 @@
 
     <footer>
         <div id="author-div">
-            <p id="author">2024 Reinis R. Varavs</p>
+            <p id="author">2024 Reinis R. Vāravs</p>
         </div>
         <div id="footer-buttons">
             <ul>
@@ -125,7 +119,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
     <script src="./scripts/gsap.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/typer.js"></script>
