--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <span class="string-highlight">'HTML'</span>]
     }; </pre>
         </div>
-        <div id="arrow-div" class="arrow">
+        <div id="arrow-div" class="floating">
             <button id="arrowBtn" class="projects-btn">
                 <img src="./images/arrow.png" id="hero-arrow">
             </button>
@@ -52,7 +52,7 @@
         </div>
         <div id="work-bottom">
             <div class="item">
-                <section>
+                <section class="floating">
                     <img class="laptop" src="./images/laptop.png">
                     <div class="laptop-display" id="display-1"></div>
                 </section>
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="item">
-                <section>
+                <section class="floating">
                     <img class="laptop" src="./images/laptop.png">
                     <div class="laptop-display" id="display-2"></div>
                 </section>
