--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                     <span class="string-highlight">'HTML'</span>]
     }; </pre>
         </div>
+        <div id="hero-image-div" class="floating">
+            <img src="./images/gold4.png">
+        </div>
         <div id="arrow-div" class="floating">
             <button id="arrowBtn" class="projects-btn">
                 <img src="./images/arrow.png" id="hero-arrow">
