--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 </head>
 <body>
     <div id="bg-image" class="bg"></div>
-    <div id="cursor"></div>
+    <section id="cursor-div"><div id="cursor"></div></section>
+    <div id="loading-screen">
+        <div id="loading-icon"></div>
+    </div>
 
     <header>
         <nav>
@@ -39,7 +42,7 @@
     }; </pre>
         </div>
         <div id="hero-image-div" class="floating">
-            <img src="./images/gold4.png">
+            <img src="./images/gold4.png" id="hero-image">
         </div>
         <div id="arrow-div" class="floating">
             <button id="arrowBtn" class="projects-btn">
