--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/snake.css">
     <link rel="stylesheet" href="./styles/footer.css">
 </head>
-<body>
+<body class="body">
     <div id="bg-image" class="bg"></div>
     <section id="cursor-div"><div id="cursor"></div></section>
     <div id="loading-screen">
