--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     }; </pre>
         </div>
         <div id="hero-image-div" class="floating">
-            <img src="./images/gold4.png" id="hero-image">
+            <img src="./images/gold4.png" id="hero-image" draggable="false">
         </div>
         <div id="arrow-div" class="floating">
             <button id="arrowBtn" class="projects-btn">
-                <img src="./images/arrow.png" id="hero-arrow">
+                <img src="./images/arrow.png" id="hero-arrow" draggable="false">
             </button>
         </div>
     </div>
@@ -59,7 +59,7 @@
         <div id="work-bottom">
             <div class="item">
                 <section class="floating">
-                    <img class="laptop" src="./images/laptop.png">
+                    <img class="laptop" src="./images/laptop.png" draggable="false">
                     <div class="laptop-display" id="display-1"></div>
                 </section>
                 <div class="about-item" id="about-item-1">
@@ -70,7 +70,7 @@
             </div>
             <div class="item">
                 <section class="floating">
-                    <img class="laptop" src="./images/laptop.png">
+                    <img class="laptop" src="./images/laptop.png" draggable="false">
                     <div class="laptop-display" id="display-2"></div>
                 </section>
                 <div class="about-item" id="about-item-2">
@@ -93,12 +93,12 @@
             <div id="icon-container">
                 <div class="icon-div">
                     <a class="link1" id="instagram" href="https://www.instagram.com/reinisrvaravs/" target="_blank">
-                        <img src="./images/ig.webp" class="icon">
+                        <img src="./images/ig.webp" class="icon" draggable="false">
                     </a>
                 </div>
                 <div class="icon-div">
                     <a class="link1" id="linkedin" href="https://www.linkedin.com/in/reinis-varavs-274289332/" target="_blank">
-                        <img src="./images/in.png" class="icon">
+                        <img src="./images/in.png" class="icon" draggable="false">
                     </a>
                 </div>
             </div>
