--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="body">
     <div id="bg-image" class="bg"></div>
-    <section id="cursor-div"><div id="cursor"></div></section>
+    <div id="cursor"></div>
     <div id="loading-screen">
         <div id="loading-icon"></div>
     </div>
