--- a/index.html
+++ b/index.html
@@ -74,9 +74,20 @@
                     <div class="laptop-display" id="display-2"></div>
                 </section>
                 <div class="about-item" id="about-item-2">
-                    <h1 class="string-highlight">Rullītis</h1>
+                    <h1 class="string-highlight">Karting center "Rullitis"</h1>
                     <p>Rullītis is a karting center and I created their website from scratch using the frontend tools I know.</p>
                     <a href="https://reinisvaravs.github.io/karting/" class="site-link" target="_blank">Case Study</a>
+                </div>
+            </div>
+            <div class="item">
+                <section class="floating">
+                    <img class="laptop" src="./images/laptop.png" draggable="false">
+                    <div class="laptop-display" id="display-3"></div>
+                </section>
+                <div class="about-item" id="about-item-3">
+                    <h1 class="string-highlight">"RMR Candles" store</h1>
+                    <p>RMR Candles is a small business that makes homemade candles and I created their website with advanced GSAP animations.</p>
+                    <a href="https://reinisvaravs.github.io/candles/" class="site-link" target="_blank">Case Study</a>
                 </div>
             </div>
         </div>
