--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     }; </pre>
         </div>
         <div id="hero-image-div" class="floating">
-            <img src="./images/gold4.png" id="hero-image" draggable="false">
+            <img src="./images/gold.png" id="hero-image" draggable="false">
         </div>
         <div id="arrow-div" class="floating">
             <button id="arrowBtn" class="projects-btn">
