--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reinis Varavs 🤟</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Glass+Antiqua&family=Lexend:wght@100..900&family=Prata&family=Tulpen+One&family=Zen+Dots&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Glass+Antiqua&family=Lexend:wght@100..900&family=Prata&family=Tulpen+One&family=Zen+Dots&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/hero.css">
@@ -15,34 +24,45 @@
 <body class="body">
     <div id="bg-image" class="bg"></div>
     <div id="cursor"></div>
-    <div id="loading-screen">
-        <div id="loading-icon"></div>
-    </div>
 
     <header>
+        <div id="name">
+            <p>Reinis R. Vāravs</p>
+            <p class="font1">UX/UI Designer, Developer</p>
+        </div>
         <nav>
-            <ul>
-                <li><button class="projects-btn">// projects</button></li>
-                <li><button class="contacts-btn">// contacts</button></li>
-            </ul>
+            <ul><li><button class="projects-btn">works,</li>
+                <li><button class="contacts-btn">contact</button></li></ul>
         </nav>
     </header>
 
     <div id="hero">
-        <div id="typewriter-div">
-<pre id="typewriter">
-    <span class="var-highlight">var</span> object = {
-        name: <span class="string-highlight">'Reinis Roberts Vāravs'</span>,
-        type: <span class="string-highlight">'Front-end Developer'</span>,
-        location: <span class="string-highlight">'Latvia, Jelgava'</span>,
-        properties:[<span class="string-highlight">'JAVASCRIPT'</span>,
-                    <span class="string-highlight">'GSAP'</span>,
-                    <span class="string-highlight">'CSS'</span>,
-                    <span class="string-highlight">'HTML'</span>]
-    }; </pre>
-        </div>
-        <div id="hero-image-div" class="floating">
-            <img src="./images/gold.png" id="hero-image" draggable="false">
+        <div id="hero-content">
+            <div id="time">
+                <div>
+                    <p id="clock">00</p>
+                </div>
+                <div id="time-right">
+                    <p id="month">jan</p>
+                    <p>available</p>
+                    <p>for work</p>
+                </div>
+            </div>
+            <div id="creative">
+                <p>creative</p>
+            </div>
+            <div id="designer">
+                <h1>DESIGNER</h1>
+                <p>&</p>
+            </div>
+            <div id="developer">
+                <h1>DEVELOPER</h1>
+            </div>
+            <div id="hero-about">
+                <p class="font1">
+                    <span style="opacity: 0;">spacespacespace</span>I am a developer and UX/UI designer based in Latvia. I love minimal and modern design. I love nature, pizza and art.
+                </p>
+            </div>
         </div>
         <div id="arrow-div" class="floating">
             <button id="arrowBtn" class="projects-btn">
@@ -100,18 +120,7 @@
             <div id="email-div">
                 <p class="email" id="email">email: <a href="mailto:rreinisvaravs@gmail.com" target="_blank">rreinisvaravs@gmail.com</a></p>
                 <p class="email" id="phone">phone: <a href="tel:+371 28816633" target="_blank">+371 28816633</a></p>
-            </div>
-            <div id="icon-container">
-                <div class="icon-div">
-                    <a class="link1" id="instagram" href="https://www.instagram.com/reinisrvaravs/" target="_blank">
-                        <img src="./images/ig.webp" class="icon" draggable="false">
-                    </a>
-                </div>
-                <div class="icon-div">
-                    <a class="link1" id="linkedin" href="https://www.linkedin.com/in/reinis-varavs-274289332/" target="_blank">
-                        <img src="./images/in.png" class="icon" draggable="false">
-                    </a>
-                </div>
+                <p class="email" id="phone">instagram: <a href="https://www.instagram.com/reinisrvaravs/" target="_blank">@reinisrvaravs</a></p>
             </div>
         </div>
     </section>
@@ -127,10 +136,8 @@
             <p id="author">2024 Reinis R. Vāravs</p>
         </div>
         <div id="footer-buttons">
-            <ul>
-                <li><button class="projects-btn">// projects</button></li>
-                <li><button class="contacts-btn">// contacts</button></li>
-            </ul>
+            <ul><li><button class="projects-btn">works,</li>
+                <li><button class="contacts-btn">contact</button></li></ul>
         </div>
     </footer>
 
@@ -139,7 +146,5 @@
     <script src="https://unpkg.com/lenis@1.1.5/dist/lenis.min.js"></script>
     <script src="./scripts/gsap.js"></script>
     <script src="./scripts/script.js"></script>
-    <script src="./scripts/typer.js"></script>
-    <script src="./scripts/snake.js"></script>
 </body>
 </html>
