--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div id="hero-about">
                 <p class="font1">
-                    <span style="opacity: 0;">spacespacespace</span>I am a developer and UX/UI designer based in Latvia. I love minimal and modern design. I love nature, pizza and art.<span style="opacity: 0;">spacespace</span>
+                    <span style="opacity: 0;">spacespacespace</span>I am a developer and UX/UI designer based in Latvia. I specialize in JAVASCRIPT and GSAP. I love minimal and modern design. I love nature, pizza and art.<span style="opacity: 0;">spacespace</span>
                 </p>
             </div>
         </div>
