--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 <body class="body">
     <div id="bg-image" class="bg"></div>
     <div id="cursor"></div>
+    <div id="header-blur"></div>
 
     <header>
         <div id="name">
-            <p>Reinis R. Vāravs</p>
-            <p class="font1">UX/UI Designer, Developer</p>
+            <p>Reinis Vāravs</p>
+            <p class="font1" id="header-prof">UX/UI Designer, Developer</p>
         </div>
         <nav>
             <ul><li><button class="projects-btn">works,</li>
