--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div id="work-bottom">
             <div class="item">
-                <section class="floating">
+                <section>
                     <img class="laptop" src="./images/laptop.png" draggable="false">
                     <div class="laptop-display" id="display-3"></div>
                 </section>
@@ -89,8 +89,8 @@
                     <a href="https://reinisvaravs.github.io/candles/" class="site-link" target="_blank">Case Study</a>
                 </div>
             </div>
-            <div class="item">
-                <section class="floating">
+            <div class="item" id="viedi-item">
+                <section>
                     <img class="laptop" src="./images/laptop.png" draggable="false">
                     <div class="laptop-display" id="display-1"></div>
                 </section>
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div class="item">
-                <section class="floating">
+                <section>
                     <img class="laptop" src="./images/laptop.png" draggable="false">
                     <div class="laptop-display" id="display-2"></div>
                 </section>
