--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div id="bg-image" class="bg"></div>
     <div id="cursor"></div>
     <div id="header-blur"></div>
+    <div id="loading-screen"></div>
 
     <header>
         <div id="name">
@@ -52,15 +53,15 @@
                 <p>creative</p>
             </div>
             <div id="designer">
-                <h1>DESIGNER</h1>
-                <p>&</p>
+                <h1 class="heroAnim">DESIGNER</h1>
+                <p class="opacityAnim">&</p>
             </div>
             <div id="developer">
-                <h1>DEVELOPER</h1>
+                <h1 class="heroAnim">DEVELOPER</h1>
             </div>
             <div id="hero-about">
                 <p class="font1">
-                    <span style="opacity: 0;">spacespacespace</span>I am a developer and UX/UI designer based in Latvia. I specialize in JAVASCRIPT and GSAP. I love minimal and modern design. I love nature, pizza and art.<span style="opacity: 0;">spacespace</span>
+                    I am a developer and UX/UI designer based in Latvia. I specialize in JAVASCRIPT and GSAP. I love design that stand out. I love nature, coffee and<span style="opacity: 0; font-size: 7px;">x</span>cars.<span style="opacity: 0;">.........</span>
                 </p>
             </div>
         </div>
