--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="laptop-display" id="display-3"></div>
                 </section>
                 <div class="about-item" id="about-item-3">
-                    <h1 class="string-highlight">"RMR Candles" store</h1>
+                    <h1 class="item-header">"RMR Candles" store</h1>
                     <p>RMR Candles is a small business that makes homemade candles and I created their website with advanced GSAP animations.</p>
                     <a href="https://reinisvaravs.github.io/candles/" class="site-link" target="_blank">Case Study</a>
                 </div>
@@ -95,7 +95,7 @@
                     <div class="laptop-display" id="display-1"></div>
                 </section>
                 <div class="about-item" id="about-item-1">
-                    <h1 class="string-highlight">Restoraunt "Viedi"</h1>
+                    <h1 class="item-header">Restoraunt "Viedi"</h1>
                     <p>"Viedi" is a web template that I created targeting the restaurant and food industry which anyone can use to present their business online.</p>
                     <a href="https://reinisvaravs.github.io/restaurant/" class="site-link" target="_blank">Case Study</a>
                 </div>
@@ -106,7 +106,7 @@
                     <div class="laptop-display" id="display-2"></div>
                 </section>
                 <div class="about-item" id="about-item-2">
-                    <h1 class="string-highlight">Karting center "Rullitis"</h1>
+                    <h1 class="item-header">Karting center "Rullitis"</h1>
                     <p>Rullītis is a karting center and I created their website from scratch using the frontend tools I know.</p>
                     <a href="https://reinisvaravs.github.io/karting/" class="site-link" target="_blank">Case Study</a>
                 </div>
@@ -125,12 +125,6 @@
             </div>
         </div>
     </section>
-
-    <div id="gameContainer">
-        <div class="loader" id="loader"></div>
-        <canvas id="gameBoard" width="500" height="500"></canvas>
-        <div id="scoreText">0</div>
-    </div>
 
     <footer>
         <div id="author-div">
