--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./styles/contacts.css">
     <link rel="stylesheet" href="./styles/footer.css">
 </head>
-<body class="body">
+<body>
     <div id="bg-image" class="bg"></div>
     <div id="cursor"></div>
     <div id="header-blur"></div>
@@ -29,7 +29,7 @@
     <header>
         <div id="name">
             <p>Reinis Vāravs</p>
-            <p class="font1" id="header-prof">UX/UI Designer, Developer</p>
+            <p id="header-prof">UX/UI Designer, Developer</p>
         </div>
         <nav>
             <ul><li><button class="projects-btn">works,</li>
@@ -60,7 +60,7 @@
                 <h1 class="heroAnim">DEVELOPER</h1>
             </div>
             <div id="hero-about">
-                <p class="font1">
+                <p>
                     I am a developer and UX/UI designer based in Latvia. I specialize in JAVASCRIPT and GSAP. I love design that stand out. I love nature, coffee and<span style="opacity: 0; font-size: 7px;">x</span>cars.<span style="opacity: 0;">.........</span>
                 </p>
             </div>
@@ -80,7 +80,7 @@
         <div id="work-bottom">
             <div class="item">
                 <section>
-                    <img class="laptop" src="./images/laptop.png" draggable="false">
+                    <img loading="lazy" class="laptop" src="./images/laptop.png" draggable="false">
                     <div class="laptop-display" id="display-3"></div>
                 </section>
                 <div class="about-item" id="about-item-3">
@@ -91,7 +91,7 @@
             </div>
             <div class="item" id="viedi-item">
                 <section>
-                    <img class="laptop" src="./images/laptop.png" draggable="false">
+                    <img loading="lazy" class="laptop" src="./images/laptop.png" draggable="false">
                     <div class="laptop-display" id="display-1"></div>
                 </section>
                 <div class="about-item" id="about-item-1">
