--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Glass+Antiqua&family=Lexend:wght@100..900&family=Prata&family=Tulpen+One&family=Zen+Dots&display=swap" rel="stylesheet">
 
+    <link href="https://api.fontshare.com/v2/css?f[]=new-title@300,400,500&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/hero.css">
@@ -61,7 +63,7 @@
             </div>
             <div id="hero-about">
                 <p>
-                    I am a developer and UX/UI designer based in Latvia. I specialize in JAVASCRIPT and GSAP. I love design that stand out. I love nature, coffee and<span style="opacity: 0; font-size: 7px;">x</span>cars.<span style="opacity: 0;">.........</span>
+                    I am a developer and UX/UI designer based in Latvia. I specialize in JAVASCRIPT and GSAP. I love designs that stand out. I love music, coffee and<span style="opacity: 0; font-size: 7px;">x</span>ai.<span style="opacity: 0;">.........</span>
                 </p>
             </div>
         </div>
@@ -78,17 +80,6 @@
             <p id="work-text">Here you will find some of the personal and clients projects that I created. As a front-end developer my main focus is making the user experience and user interface as smooth as possible.</p>
         </div>
         <div id="work-bottom">
-            <div class="item">
-                <section>
-                    <img loading="lazy" class="laptop" src="./images/laptop.png" draggable="false">
-                    <div class="laptop-display" id="display-3"></div>
-                </section>
-                <div class="about-item" id="about-item-3">
-                    <h1 class="item-header">"RMR Candles" store</h1>
-                    <p>RMR Candles is a small business that makes homemade candles and I created their website with advanced GSAP animations.</p>
-                    <a href="https://reinisvaravs.github.io/candles/" class="site-link" target="_blank">Case Study</a>
-                </div>
-            </div>
             <div class="item" id="viedi-item">
                 <section>
                     <img loading="lazy" class="laptop" src="./images/laptop.png" draggable="false">
@@ -98,6 +89,17 @@
                     <h1 class="item-header">Restoraunt "Viedi"</h1>
                     <p>"Viedi" is a web template that I created targeting the restaurant and food industry which anyone can use to present their business online.</p>
                     <a href="https://reinisvaravs.github.io/restaurant/" class="site-link" target="_blank">Case Study</a>
+                </div>
+            </div>
+            <div class="item">
+                <section>
+                    <img loading="lazy" class="laptop" src="./images/laptop.png" draggable="false">
+                    <div class="laptop-display" id="display-3"></div>
+                </section>
+                <div class="about-item" id="about-item-3">
+                    <h1 class="item-header">"RMR Candles" store</h1>
+                    <p>RMR Candles is a small business that makes homemade candles and I created their website with advanced GSAP animations.</p>
+                    <a href="https://reinisvaravs.github.io/candles/" class="site-link" target="_blank">Case Study</a>
                 </div>
             </div>
             <div class="item">
