--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Glass+Antiqua&family=Lexend:wght@100..900&family=Prata&family=Tulpen+One&family=Zen+Dots&display=swap" rel="stylesheet">
 
-    <link href="https://api.fontshare.com/v2/css?f[]=new-title@300,400,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Glass+Antiqua&family=Lexend:wght@100..900&family=Prata&family=Six+Caps&family=Tulpen+One&family=Zen+Dots&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/header.css">
