--- a/index.html
+++ b/index.html
@@ -70,45 +70,62 @@
             </div>
         </div>
     </div>
-    
-    <div id="work">
-        <div id="work-top">
-            <h4 class="section-header">Projects</h4>
-            <p id="work-text">Here you will find some of the personal and clients projects that I created. As a front-end developer my main focus is making the user experience and user interface as smooth as possible.</p>
+
+
+    <div class="work">
+        <div class="work-item">
+            <div class="work-img-div">
+                <div id="work-viedi" class="work-img" onclick="window.open('https://reinisvaravs.github.io/restaurant/', `_blank`);"></div>
+                <div class="ontop-div" onclick="window.open('https://reinisvaravs.github.io/restaurant/', `_blank`);">
+                    <h1>Restaurant</h1>
+                </div>
+            </div>
+            <div class="work-text-div" onclick="window.open('https://reinisvaravs.github.io/restaurant/', `_blank`);">
+                <h1>Restaurant</h1>
+            </div>            
         </div>
-        <div id="work-bottom">
-            <div class="item" id="viedi-item">
-                <section>
-                    <img loading="lazy" class="laptop" src="./images/laptop.png" draggable="false">
-                    <div class="laptop-display" id="display-1"></div>
-                </section>
-                <div class="about-item" id="about-item-1">
-                    <h1 class="item-header">Restoraunt "Viedi"</h1>
-                    <p>"Viedi" is a web template that I created targeting the restaurant and food industry which anyone can use to present their business online.</p>
-                    <a href="https://reinisvaravs.github.io/restaurant/" class="site-link" target="_blank">Case Study</a>
+        <div class="work-item">
+            <div class="work-img-div">
+                <div id="work-candles" class="work-img" onclick="window.open('https://reinisvaravs.github.io/candles/', `_blank`);"></div>
+                <div class="ontop-div" onclick="window.open('https://reinisvaravs.github.io/candles/', `_blank`);">
+                    <h1>Candle Store</h1>
                 </div>
             </div>
-            <div class="item">
-                <section>
-                    <img loading="lazy" class="laptop" src="./images/laptop.png" draggable="false">
-                    <div class="laptop-display" id="display-3"></div>
-                </section>
-                <div class="about-item" id="about-item-3">
-                    <h1 class="item-header">"RMR Candles" store</h1>
-                    <p>RMR Candles is a small business that makes homemade candles and I created their website with advanced GSAP animations.</p>
-                    <a href="https://reinisvaravs.github.io/candles/" class="site-link" target="_blank">Case Study</a>
+            <div class="work-text-div">
+                <h1 onclick="window.open('https://reinisvaravs.github.io/candles/', `_blank`);">Candle Store</h1>
+            </div>
+        </div>
+        <div class="work-item">
+            <div class="work-img-div">
+                <div id="work-karting" class="work-img" onclick="window.open('https://reinisvaravs.github.io/karting/', `_blank`);"></div>
+                <div class="ontop-div" onclick="window.open('https://reinisvaravs.github.io/karting/', `_blank`);">
+                    <h1>Karting Center</h1>
                 </div>
             </div>
-            <div class="item">
-                <section>
-                    <img class="laptop" src="./images/laptop.png" draggable="false">
-                    <div class="laptop-display" id="display-2"></div>
-                </section>
-                <div class="about-item" id="about-item-2">
-                    <h1 class="item-header">Karting center "Rullitis"</h1>
-                    <p>Rullītis is a karting center and I created their website from scratch using the frontend tools I know.</p>
-                    <a href="https://reinisvaravs.github.io/karting/" class="site-link" target="_blank">Case Study</a>
+            <div class="work-text-div">
+                <h1 onclick="window.open('https://reinisvaravs.github.io/karting/', `_blank`);">Karting Center</h1>
+            </div>
+        </div>
+        <div class="work-item">
+            <div class="work-img-div">
+                <div id="work-website1" class="work-img"></div>
+                <div class="ontop-div">
+                    <h1>Website</h1>
                 </div>
+            </div>
+            <div class="work-text-div">
+                <h1>Website</h1>
+            </div>
+        </div>
+        <div class="work-item">
+            <div class="work-img-div">
+                <div id="work-website2" class="work-img"></div>
+                <div class="ontop-div">
+                    <h1>Website</h1>
+                </div>
+            </div>
+            <div class="work-text-div">
+                <h1>Website</h1>
             </div>
         </div>
     </div>
