--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
         </div>
     </div>
 
-
+    <div id="selected-cases-div">
+        <img src="./images/web.png">
+        <h1 id="selected-cases">Selected Cases</h1>
+    </div>
     <div class="work">
         <div class="work-item">
             <div class="work-img-div">
